# api/controllers/flightnet.js
@@ -1,0 +1,83 @@
+'use strict';
+/*
+ 'use strict' is not required but helpful for turning syntactical errors into true errors in the program flow
+ https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode
+*/
+
+/*
+ Modules make it possible to import JavaScript files into your application.  Modules are imported
+ using 'require' statements that give you a reference to the module.
+
+  It is a good idea to list the modules that your application depends on in the package.json in the project root
+ */
+var util = require('util');
+var request = require('request');
+
+var FLIGHTNET_COMPANY  = process.env.FLIGHTNET_COMPANY;
+var FLIGHTNET_USERNAME = process.env.FLIGHTNET_USERNAME;
+var FLIGHTNET_PASSWORD = process.env.FLIGHTNET_PASSWORD;
+
+/*
+ Once you 'require' a module you can reference the things that it exports.  These are defined in module.exports.
+
+ For a controller in a127 (which this is) you should export the functions referenced in your Swagger document by name.
+
+ Either:
+  - The HTTP Verb of the corresponding operation (get, put, post, delete, etc)
+  - Or the operationId associated with the operation in your Swagger document
+
+  In the starter/skeleton project the 'get' operation on the '/hello' path has an operationId named 'hello'.  Here,
+  we specify that in the exports of this module that 'hello' maps to the function named 'hello'
+ */
+module.exports = {
+  getReservationsByDate: getReservations, 
+  getReservationsToday: getReservations, 
+};
+
+/*
+  Functions in a127 controllers used for operations should take two parameters:
+
+  Param 1: a handle to the request object
+  Param 2: a handle to the response object
+ */
+
+var strftime = require('strftime');
+var iconvlite = require('iconv-lite');
+var csvparse = require('csv-parse');
+
+function getReservations(req, res) {
+  var date = req.swagger.params.date.value;
+  if (date !== undefined && date.length==8) {
+    // compatbility mode with old api invocation, REMOVE and switch to date argument!
+    date = date.substr(0,4) + '-' + date.substr(4,2) + '-' + date.substr(6,2);
+  };
+  var at = new Date(date) || Date.now()
+  var startdate = strftime('%Y%m%d', at);
+  var enddate = strftime('%Y%m%d', at);
+  var fields = {
+                "company": FLIGHTNET_COMPANY,
+                "username": FLIGHTNET_USERNAME,
+                "password": FLIGHTNET_PASSWORD,
+                "startdate": startdate,
+                "enddate": enddate,
+                "showdeleted": "false",
+                };
+
+  var url = "https://www.flightnet.aero/api/getreservations.ashx";
+
+  request({url: url, qs: fields, 'encoding': null}, function(error, response, body) {
+    if (error) {
+      next(error);
+    };
+
+    var data = iconvlite.decode(body, 'UTF-16LE');
+    data = data.split("\n").slice(1).join("\n");
+
+    csvparse(data, {delimiter: '\t', columns: true, rtrim: true}, function(err, data) {
+      if (err) {
+        next(err);
+      }
+      res.json(data);
+    });
+  });
+}
